# Schema_Refinery

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  N_split.py  README.md  README.rst  alelle_call_paralogous_merger.py  alleles_frequency.py  annotation_merger.py  annotations_merger.py  assembly_statistics.py  cluster_distances.py  distance_matrix.py  download_ncbi_assemblies.py  download_reference_proteomes.py  ena661k_species_assembly_fetcher.py  entrez_id_fetcher.py  fasta_header_integer.py  fetch_metadata.py  gc_content.py  genbank_annotations.py  genbank_annotations_2.py  inter_loci_validation.py  intra_loci_validation.py  loci_positions.py  locus_length_variability.py  locus_pairwise_graph.py  mask_matrix.py  match_schemas.py  merge_loci.py  missing_ids.py  myscript.py  new_loci_annotations.py  paralogous_interloci_validation_merger.py  post_allelecall_plots.py  procompare.py  (+14 more)
SchemaRefinery/: __init__.py  schema_refinery.py
SchemaRefinery/AdaptLoci/: AdaptLoci.py
SchemaRefinery/ApplyRecommendations/: ApplyRecommendations.py
SchemaRefinery/CreateSchemaStructure/: CreateSchemaStructure.py
SchemaRefinery/DownloadAssemblies/: .~lock.input_table_example.tsv#  DownloadAssemblies.py  constants.py  download_assemblies.py  ena661k_assembly_fetcher.py  fetch_metadata.py  input_table_example.tsv  ncbi_assembly_fetcher.py  ncbi_assembly_fetcher_to_remove.py  ncbi_datasets.py  ncbi_datasets_summary.py  ncbi_linked_ids.py  parameter_validation.py  reqseq_ids_tables.tsv
SchemaRefinery/DownloadAssemblies/legacy_code/: ncbi_linked_ids.py
SchemaRefinery/IdentifyDuplicateGenes/: IdentifyDuplicateGenes.py
SchemaRefinery/IdentifyParalagousLoci/: IdentifyParalagousLoci.py  IdentifyParalogousLoci.py
SchemaRefinery/IdentifyParalogousLoci/: IdentifyParalogousLoci.py
SchemaRefinery/IdentifyProblematicLoci/: IdentifyProblematicLoci.py
SchemaRefinery/MatchSchema/: MatchSchemas.py  match_schemas_new.py
SchemaRefinery/MatchSchemas/: MatchSchemas.py
SchemaRefinery/ModifySchema/: ModifySchema.py  merge_loci.py  remove_loci.py  split_loci.py
SchemaRefinery/RefineSchema/: IdentifyDuplicateGenes.py  IdentifyParalagousLoci.py  IdentifySpuriousGenes.py  RefineSchema.py  SpuriousLoci.py  SpuriousLociIdentification.py  UnclassifiedCDS.py  blast_functions.py  constants.py  file_functions.py  gene_fusions.py  identify_paralagous_loci.py  new_module.py  other.py  paralagous_loci.py  run_refine_schema.py  sequence_functions.py  spurious_loci.py  spurious_loci_identification.py  unclassified_cds.py
SchemaRefinery/RefineSchema/Legacy_code/: IdentifySpuriousGenes.py
SchemaRefinery/SchemaAnnotation/: GenbankAnnotations.py  MatchSchemas.py  ProteomeAnnotations.py  SchemaAnnotation.py  consolidate.py  genbank_annotations.py  genbank_annotations_new.py  match_schemas.py  proteome_fetcher.py  proteome_matcher.py  proteome_splitter.py
SchemaRefinery/SchemaAnnotation/legacy_code/: genbank_annotations.py
SchemaRefinery/docs/: conf.py  index.rst  requirements.txt
SchemaRefinery/docs/SchemaRefinery/Modules/: AdaptLoci.rst  AdaptLociOutputDescription.rst  ApplyRecommendations.rst  ApplyRecommendationsOutputDescription.rst  CreateSchemaStructure.rst  CreateSchemaStructureOutputDescription.rst  DownloadAssemblies.rst  DownloadAssembliesOutputExplanation.rst  (+9 more)
SchemaRefinery/modify_schema/: Merge_loci.py
SchemaRefinery/utils/: Types.py  adapt_loci.py  aligments_functions.py  alignments_functions.py  blast_functions.py  classify_cds_functions.py  clustering_functions.py  constants.py  core_functions.py  core_functions_blastppn.py  decorators.py  download_functions.py  file_functions.py  globals.py  graphical_functions.py  iterable_functions.py  json_utils.py  kmers_functions.py  linux_functions.py  list_functions.py  logger_functions.py  other.py  pandas_functions.py  parameter_validation.py  print_functions.py  schema_classification_functions.py  sequence_functions.py  statistics.py  time_functions.py  validation.py
SchemaRefinery/utils/Legacy_code/: core_functions.py
Schema_refinery/: __init__.py  schema_refinery.py
Schema_refinery/DownloadAssemblies/: download_assemblies.py  ena661k_assembly_fetcher.py  fetch_metadata.py  ncbi_assembly_fetcher.py  ncbi_datasets_summary.py  ncbi_linked_ids.py
Schema_refinery/Download_module/: Download_module.py  ena661k_assembly_fetcher.py  fetch_metadata.py  filter_critirea.tsv  ncbi_datasets_summary.py  ncbi_linked_ids.py
Schema_refinery/SchemaAnnotation/: AnnotationMerger.py  GenbankAnnotations.py  MatchSchemas.py  ProteomeAnnotations.py  SchemaAnnotation.py  proteome_fetcher.py  proteome_matcher.py  proteome_splitter.py
Schema_refinery/utils/: blast_functions.py  constants.py  file_functions.py  validation.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
schema_refinery/: __init__.py  schema_refinery.py
schema_refinery/SchemaAnnotation/: AnnotationMerger.py  GenbankAnnotations.py  ProteomeAnnotations.py  SchemaAnnotation.py  annotation_merger.py  genbank_annotations.py  proteome_annotations.py  proteome_fetcher.py  proteome_matcher.py  proteome_splitter.py  schema_annotation.py
schema_refinery/utils/: validation.py
scripts/: alleles_frequency.py  assembly_statistics.py  distinct_variants.py  download_reads_ena.py  ena661k_assembly_fetcher.py  gc_content.py  genbank_annotations.py  intra_loci_validation.py  loci_correspondence.py  match_schemas.py  merge_loci.py  missing_ids.py  paralogous_interloci_validation_merger.py  post_allelecall_plots.py  protein_diversity.py  redundant_alleles.py  refine_schema.py  schema_validation_functions.py
tests/: __init__.py  test_schema_refinery.py
(+66 files in other folders)
