[build-system]
requires = ["setuptools >= 75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SchemaRefinery"
version = "0.3"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.24.3",
    "scipy >= 1.10.1",
    "biopython >= 1.79",
    "plotly >= 5.8.0",
    "requests >= 2.27.1",
    "pandas >= 1.5.1,<2.1",
    "psutil >= 5.1.1",
]
authors = [
    {name = "Mykyta Forofontov"},
    {name = "Rafael Mamede"},
    {name = "Mário Ramirez"},
]
maintainers = [
  {name = "UMMI", email = "imm-bioinfo@medicina.ulisboa.pt"}
]
description = "Tool to refine cg/wgMLST Schemas"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "bioinformatics",
    "genomics",
    "mlst",
    "bacteria",
    "cgmlst",
    "wgmlst",
    "outbreak detection",
    "allele calling",
    "bacterial typing",
    "bacterial genome analysis"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Environment :: Console',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

[project.urls]
Repository = "https://github.com/MForofontov/Schema_Refinery"
Documentation = "https://schema-refinery.readthedocs.io/en/latest/index.html#"
Changelog = "https://github.com/MForofontov/Schema_Refinery/blob/main/CHANGELOG.md"