[metadata]
name = SchemaRefinery
version = 0.3.0
description = Tool to refine cg/wgMLST Schemas
long_description = file: README.md
long_description_content_type = text/markdown
author = UMMI
author_email = imm-bioinfo@medicina.ulisboa.pt
url = https://github.com/B-UMMI/schema_refinery
license = GNU General Public License v3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Unix
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = schema_refinery, bioinformatics, genomics, mlst, bacteria, cgmlst, wgmlst

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy >= 1.24.3
    scipy >= 1.10.1
    biopython >= 1.79
    plotly >= 5.8.0
    requests >= 2.27.1
    pandas >= 1.5.1,<2.1
    psutil >= 5.1.1

[options.entry_points]
console_scripts =
    SchemaRefinery = SchemaRefinery.schema_refinery:entry_point
    SR = SchemaRefinery.schema_refinery:entry_point

[options.extras_require]
test =
    pytest >= 3

[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:schema_refinery/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']